[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/custom/Board.gd" type="Script" id=1]
[ext_resource path="res://src/custom/Deck.gd" type="Script" id=2]
[ext_resource path="res://src/custom/Discard.gd" type="Script" id=3]
[ext_resource path="res://src/core/CardContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/core/Hand.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="Board" type="Node2D"]
script = ExtResource( 1 )

[node name="Deck" parent="." instance=ExtResource( 4 )]
script = ExtResource( 2 )

[node name="DiscardPile" parent="." instance=ExtResource( 4 )]
script = ExtResource( 3 )
faceup_cards = true

[node name="Control" parent="DiscardPile" index="0"]
custom_styles/panel = SubResource( 1 )

[node name="Label" parent="DiscardPile/Control/CenterContainer" index="0"]
margin_left = 43.0
margin_right = 106.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Discard"

[node name="Hand" parent="." instance=ExtResource( 5 )]

[node name="FancyMovementToggle" type="CheckButton" parent="."]
margin_right = 12.0
margin_bottom = 20.0
pressed = true
text = "Fancy Movement"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnableAttach" type="CheckButton" parent="."]
margin_left = 209.57
margin_top = 1.33484
margin_right = 398.57
margin_bottom = 41.3348
text = "Enable Attachment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScalingFocusOptions" type="OptionButton" parent="."]
margin_left = -1.33484
margin_top = 44.0497
margin_right = 187.665
margin_bottom = 84.0497
pressed = true
text = "Scaling + Viewport Focus"
items = [ "Scaling Focus", null, false, 0, null, "Viewport Focus", null, false, 1, null, "Scaling + Viewport Focus", null, false, 2, null ]
selected = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReshuffleAll" type="Button" parent="."]
margin_left = 9.89948
margin_top = 116.762
margin_right = 200.899
margin_bottom = 136.762
text = "Reshuffle all cards into deck"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="FancyMovementToggle" to="." method="_on_FancyMovementToggle_toggled"]
[connection signal="toggled" from="EnableAttach" to="." method="_on_EnableAttach_toggled"]
[connection signal="item_selected" from="ScalingFocusOptions" to="." method="_on_ScalingFocusOptions_item_selected"]
[connection signal="pressed" from="ReshuffleAll" to="." method="_on_ReshuffleAll_pressed"]

[editable path="DiscardPile"]
